--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Paradigm Shift by HTML5 UP</title>
+	<title>Bhavyam Salvi's Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
@@ -30,7 +30,7 @@
 				</ul>
 			</header>
 			<div class="content">
-				<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+				<span class="image fill" data-position="center"><img src="https://i.postimg.cc/fR0R9WnH/12.jpg" alt="" /></span>
 			</div>
 		</section>
 
@@ -44,7 +44,7 @@
 					solving skills. Seeking to lower the workload of my employer through proven strengths in creativity,
 					collaboration, and taking criticism. Also excels at several tech tools, including Illustrator,
 					Photoshop, Indesign and After Effects. </p>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<span class="image main"><img src="https://i.postimg.cc/w3KWBZfM/2.jpg" alt="" /></span>
 			</div>
 		</section>
 
@@ -79,9 +79,9 @@
 				<section>
 					<header>
 						<h3>Illustrations</h3>
-						<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem
-							adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt ipsum
-							suspendisse ultrices gravida.</p>
+						<p>In any art, you don't know in advance what you want to say - it's revealed to you as you say it. That's the difference between art and illustration. <br>
+
+							- Aaron Siskind </p>
 					</header>
 					<div class="content">
 						<div class="gallery">
@@ -101,9 +101,8 @@
 				<section>
 					<header>
 						<h3>Posters</h3>
-						<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante
-							interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
-							mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+						<p>The epiphany for me was that I wasn't a writer, and I had to do something with these texts. I put them in the streets as posters. <br>
+						- Jenny Holzer</p>
 					</header>
 					<div class="content">
 						<div class="gallery">
@@ -122,9 +121,8 @@
 				<section>
 					<header>
 						<h3>Image Retouch</h3>
-						<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare
-							velit lacus, ac varius sed enim lorem ullamcorper dolore. ac varius enim lorem ullamcorper
-							dolore. Proin aliquam facilisis.</p>
+						<p>Please don't retouch my wrinkles. It took me so long to earn them. <br>
+						- Anna Magnani </p>
 					</header>
 					<div class="content">
 						<div class="gallery">
@@ -144,15 +142,13 @@
 		<section>
 			<header>
 				<h3>23BMI</h3>
-				<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing
-					sed dolor sit amet, consectetur amet do eiusmod tempor incididunt ipsum suspendisse ultrices
-					gravida.</p>
+				<p>I used to work as an intern with 23bmi. They were built on the premise that you can loose weight without going to the gym. For more info visit their website.</p>
 			</header>
 			<div class="content">
 				<div class="gallery">
-					<a href="https://i.postimg.cc/N03VBHv7/7.jpg" class="landscape"><img src="https://i.postimg.cc/CLpFmRZ8/01.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/zDRBSrcM/1.jpg"><img class="squareImg" src="https://i.postimg.cc/zDRBSrcM/1.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/8P7hBn6c/2.jpg"><img class="squareImg" src="https://i.postimg.cc/8P7hBn6c/2.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/N03VBHv7/7.jpg" class="landscape"><img src="https://i.postimg.cc/cCLjxdPc/01.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/fTYjgGV2/1.jpg"><img class="squareImg" src="https://i.postimg.cc/fTYjgGV2/1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/44DQPfxH/2.jpg"><img class="squareImg" src="https://i.postimg.cc/44DQPfxH/2.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/4yWrcvdC/11.jpg"><img class="squareImg" src="https://i.postimg.cc/4yWrcvdC/11.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/c1TqPWcD/000.jpg"><img class="squareImg" src="https://i.postimg.cc/c1TqPWcD/000.jpg" alt="" /></a>
 				</div>
