--- a/index.html
+++ b/index.html
@@ -48,23 +48,7 @@
 			</div>
 		</section>
 
-		<!-- Section -->
-		<section>
-			<header>
-				<h2>Skills</h2>
-			</header>
-			<div class="content">
-				<p>Here is a list of Softwares I know: </p>
-				<ul class="feature-icons">
-					<li class="icon solid fa-bolt">Photoshop</li>
-					<li class="icon solid fa-bolt">Illustrator</li>
-					<li class="icon solid fa-signal">Indesign</li>
-					<li class="icon solid fa-cog">After Effects</li>
-				</ul>
-				<p>I am currently studying CGI in MAAC so there a couple of softwares I am yet to learn. Some of them
-					are Maya, 3D Studio Max, Mudbox, etc.</p>
-			</div>
-		</section>
+		
 
 		<!-- Section -->
 		<section>
@@ -136,6 +120,22 @@
 					</div>
 				</section>
 
+			</div>
+		</section>
+
+		<section>
+			<header>
+				<h3>Webarcitech</h3>
+				<p>This is something I designed to practise brand identity.</p>
+			</header>
+			<div class="content">
+				<div class="gallery">
+					<a href="https://i.postimg.cc/wBSGTDwc/1.jpg" class="landscape"><img src="https://i.postimg.cc/wBSGTDwc/1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/tJjLqFBn/Untitled-1.jpg"><img class="squareImg" src="https://i.postimg.cc/tJjLqFBn/Untitled-1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg"><img class="squareImg" src="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/K8kQWR56/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/sgYG1zfB/01.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/Xq1cHbBN/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/0N9Mw4rV/02.jpg" alt="" /></a>
+				</div>
 			</div>
 		</section>
 
@@ -444,9 +444,8 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				<h2>Get in touch</h2>
 			</header>
 			<div class="content">
-				<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus.
-					Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
-				<form>
+				<p>If you any have<strong> queries</strong> please do not hesitate to drop a message. </p>
+				<form action="https://formspree.io/f/xnqwjgbp" method="POST">
 					<div class="fields">
 						<div class="field half">
 							<input type="text" name="name" id="name" placeholder="Name" />
@@ -467,30 +466,26 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				<ul class="items">
 					<li>
 						<h3>Email</h3>
-						<a href="#">information@untitled.ext</a>
+						<a href="https://mail.google.com/mail">salvibhavyam2001@gmail.com</a>
 					</li>
 					<li>
 						<h3>Phone</h3>
-						<a href="#">(000) 000-0000</a>
+						<span>8097133151</span>
 					</li>
 					<li>
 						<h3>Address</h3>
-						<span>1234 Somewhere Road, Nashville, TN 00000</span>
+						<span>Mumbai, Maharashtra</span>
 					</li>
 					<li>
 						<h3>Elsewhere</h3>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+							<li><a href="https://www.linkedin.com/in/bhavyam-salvi-8707a31b8" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 							</li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+							<li><a href="https://www.instagram.com/domainofdesign/?hl=en" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a>
 							</li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+							<li><a href="https://twitter.com/Bhavyam13" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							</li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 						</ul>
-					</li>
 				</ul>
 			</footer>
 		</section>
