--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 			</header>
 			<div class="content">
 				<div class="gallery">
-					<a href="https://i.postimg.cc/wBSGTDwc/1.jpg" class="landscape"><img src="https://i.postimg.cc/wBSGTDwc/1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/wBSGTDwc/1.jpg" class="landscape"><img src="https://i.postimg.cc/QxrXCTFb/i.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/tJjLqFBn/Untitled-1.jpg"><img class="squareImg" src="https://i.postimg.cc/tJjLqFBn/Untitled-1.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg"><img class="squareImg" src="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/K8kQWR56/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/sgYG1zfB/01.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/Xq1cHbBN/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/0N9Mw4rV/02.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/K8kQWR56/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/ZR52QJsX/1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/Xq1cHbBN/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/W3YCLxQz/2.jpg" alt="" /></a>
 				</div>
 			</div>
 		</section>
