--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 				<h2>My Work</h2>
 			</header>
 			<div class="content">
-				<p>Some of the designs that are shown here were delivered to the clients while I was working with them
-					and some of the creatives were designed by me mostly to elevate my skills.</p>
+				<p><strong>Click on the creative to have a better look at it.</strong></p>
 
 				<!-- Section -->
 				<section>
@@ -135,8 +134,8 @@
 					<a href="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg"><img class="squareImg" src="https://i.postimg.cc/Gtx6H9f7/Untitled-2.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/d3JFQQr5/556209.jpg" class="landscape"><img src="https://i.postimg.cc/d3JFQQr5/556209.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/wTwdQpYm/1.jpg" class="landscape"><img src="https://i.postimg.cc/wTwdQpYm/1.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/t4cZfFy9/Untitled-1.jpg"><img class="squareImg" src="https://i.postimg.cc/t4cZfFy9/Untitled-1.jpg" alt="" /></a>
-					<a href="https://i.postimg.cc/TPvr3BNK/Untitled-3.jpg"><img class="squareImg" src="https://i.postimg.cc/4ybHS3QZ/1.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/tCQ0kY73/O73VCQ.jpg"><img class="squareImg" src="https://i.postimg.cc/tCQ0kY73/O73VCQ.jpg" alt="" /></a>
+					<a href="https://i.postimg.cc/vTGr8r37/1.jpg"><img class="squareImg" src="https://i.postimg.cc/vTGr8r37/1.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/K8kQWR56/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/ZR52QJsX/1.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/Xq1cHbBN/PSD-0.jpg" class="landscape"><img src="https://i.postimg.cc/W3YCLxQz/2.jpg" alt="" /></a>
 					<a href="https://i.postimg.cc/wT04fCQ8/4.jpg" class="landscape"><img src="https://i.postimg.cc/bNtd3Phd/01.jpg" alt="" /></a>
@@ -161,21 +160,7 @@
 			</div>
 		</section>
 
-		<!-- Section -->
-		<section>
-			<header>
-				<h2>Duis sed adpiscing veroeros amet</h2>
-			</header>
-			<div class="content">
-				<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare
-					velit lacus, ac varius enim lorem ullamcorper dolore.</p>
-				<ul class="actions">
-					<li><a href="#" class="button primary large">Get Started</a></li>
-					<li><a href="#" class="button large">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-
+		
 		<!-- Elements -->
 		<!--
 					<section>
@@ -497,7 +482,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 		</section>
 
 		<!-- Copyright -->
-		<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.
+		<div class="copyright">&copy; Bhavyam Salvi. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.
 		</div>
 
 	</div>
